# 3DEX

./: .gitignore  3dexconfig_functions.sh  CMakeInstall  CMakeLists.txt  LICENSE.CeCILL  Makefile.in  README  Version  configure
doc/: Doxyfile  doxygen_entrydb_3555.tmp
doc/html/: _formulas.tex  almn__survey__tools_8h.html  almn__survey__tools_8h__dep__incl.dot  almn__survey__tools_8h__dep__incl.md5  almn__survey__tools_8h__incl.dot  almn__survey__tools_8h__incl.md5  almn__survey__tools_8h_aa801be9dff8e7cfa0d423f25660f2be7_cgraph.dot  almn__survey__tools_8h_aa801be9dff8e7cfa0d423f25660f2be7_cgraph.md5  almn__survey__tools_8h_source.html  almnfile2rmap_8f90.html  almnfile2rmap_8f90_a6d0dedf259bd8fd264834dfa2b7c1e54_cgraph.dot  almnfile2rmap_8f90_a6d0dedf259bd8fd264834dfa2b7c1e54_cgraph.md5  almnfile2rmap_8f90_source.html  annotated.html  classes.html  compute__legen__plm_8f90.html  compute__legen__plm_8f90_a2032fd7ae36ce5435bfdc1640d7b667c_cgraph.dot  compute__legen__plm_8f90_a2032fd7ae36ce5435bfdc1640d7b667c_cgraph.md5  compute__legen__plm_8f90_source.html  compute__qln_8f90.html  compute__qln_8f90_ae7b07a1e362291b253fb9ff2e90a77b2_cgraph.dot  compute__qln_8f90_ae7b07a1e362291b253fb9ff2e90a77b2_cgraph.md5  compute__qln_8f90_source.html  compute__qml__pl_8f90.html  compute__qml__pl_8f90_a874d0882e4da31f68f7b367d2a615239_cgraph.dot  compute__qml__pl_8f90_a874d0882e4da31f68f7b367d2a615239_cgraph.md5  compute__qml__pl_8f90_source.html  cosmotools_8f90.html  cosmotools_8f90_source.html  f3dex_8f90.html  f3dex_8f90_source.html  f3dex__cosmotools_8f90.html  f3dex__cosmotools_8f90_source.html  f3dex__fitstools_8f90.html  f3dex__fitstools_8f90_source.html  f3dex__stats_8f90.html  f3dex__stats_8f90_source.html  f3dex__transforms_8f90.html  f3dex__transforms_8f90_source.html  f3dex__utests_8f90.html  (+280 more)
doc/html/search/: all_5f.html  all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_66.html  all_67.html  all_68.html  all_69.html  all_6b.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_70.html  all_71.html  all_72.html  all_73.html  all_74.html  all_75.html  all_77.html  classes_63.html  classes_67.html  classes_72.html  classes_73.html  defines_5f.html  files_61.html  files_63.html  files_66.html  files_68.html  files_71.html  files_73.html  files_75.html  functions_5f.html  functions_61.html  functions_62.html  functions_63.html  functions_64.html  functions_65.html  (+31 more)
doc/latex/: almn__survey__tools_8h.tex  almn__survey__tools_8h__dep__incl.dot  almn__survey__tools_8h__dep__incl.md5  almn__survey__tools_8h__incl.dot  almn__survey__tools_8h__incl.md5  almn__survey__tools_8h_aa801be9dff8e7cfa0d423f25660f2be7_cgraph.dot  almn__survey__tools_8h_aa801be9dff8e7cfa0d423f25660f2be7_cgraph.md5  almnfile2rmap_8f90.tex  almnfile2rmap_8f90_a6d0dedf259bd8fd264834dfa2b7c1e54_cgraph.dot  almnfile2rmap_8f90_a6d0dedf259bd8fd264834dfa2b7c1e54_cgraph.md5  annotated.tex  compute__legen__plm_8f90.tex  compute__legen__plm_8f90_a2032fd7ae36ce5435bfdc1640d7b667c_cgraph.dot  compute__legen__plm_8f90_a2032fd7ae36ce5435bfdc1640d7b667c_cgraph.md5  compute__qln_8f90.tex  compute__qln_8f90_ae7b07a1e362291b253fb9ff2e90a77b2_cgraph.dot  compute__qln_8f90_ae7b07a1e362291b253fb9ff2e90a77b2_cgraph.md5  compute__qml__pl_8f90.tex  compute__qml__pl_8f90_a874d0882e4da31f68f7b367d2a615239_cgraph.dot  compute__qml__pl_8f90_a874d0882e4da31f68f7b367d2a615239_cgraph.md5  cosmotools_8f90.tex  doxygen.sty  f3dex_8f90.tex  f3dex__cosmotools_8f90.tex  f3dex__fitstools_8f90.tex  f3dex__stats_8f90.tex  f3dex__transforms_8f90.tex  f3dex__utests_8f90.tex  f3dex__utils_8f90.tex  files.tex  hankel_8f90.tex  hankel_8f90_adb92bd3d1de59d1dd5467ea5844204e4_cgraph.dot  hankel_8f90_adb92bd3d1de59d1dd5467ea5844204e4_cgraph.md5  hierarchy.tex  index.tex  mainpage_8h.tex  modulegaussian_selection.tex  modulegaussian_selection__inherit__graph.dot  modulegaussian_selection__inherit__graph.md5  moduleselection_function.tex  (+221 more)
res/: qlnTable_100_100.fits
src/: mainpage.h
src/cxx/: almn_survey_tools.h  compute_qln.cpp  sbtools.cpp  sbtools.h  selectionFunction.h  survey.cpp  survey.h  survey2almn.cpp  survey2almn_mpi.cpp
src/f90/almn2cln/: Makefile  almn2cln.f90
src/f90/almnfile2cln/: Makefile  almnfile2cln.f90
src/f90/almnfile2rmap/: Makefile  almnfile2rmap.f90
src/f90/compute_legen_plm/: compute_legen_plm.f90
src/f90/compute_plm/: Makefile  compute_plm.f90
src/f90/compute_qln/: Makefile  compute_qln.f90
src/f90/compute_qml_pl/: compute_qml_pl.f90
src/f90/mod/: Makefile  cosmotools.f90  f3dex.f90  f3dex_cosmotools.f90  f3dex_fitstools.f90  f3dex_stats.f90  f3dex_transforms.f90  f3dex_utests.f90  f3dex_utils.f90
src/f90/survey2almn/: Makefile  survey2almn.f90
src/f90/survey2almn_interactive/: Makefile  survey2almn_interactive.f90
src/f90/survey2almn_lm/: Makefile  survey2almn_lm.f90
src/f90/utests/: utest_inverse.f90  utest_legendre.f90  utest_legendre_angmatrices.f90  utest_trace.f90  utest_traceprod.f90  utests.f90
src/idl/: clkn_diff_contour.pro
test/: 2mrs30.out  horizon_005_60k.txt  parameters.txt  params.txt
